tinyc/test/bad/ptr-arith-subtract-assign.c
int main()
{
    int x;
    int *p = &x;

    x -= p;

    return 0;
}
